# fr24

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  fr24.example.conf  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  request.proto  requirements.txt  sitemap.xml  test_main.py
.github/: dependabot.yml  renovate.json  renovate.json5
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  tests.yml
api/base/: index.html
api/cache/: index.html
api/core/: index.html
api/functions/: index.html
api/grpc_changelog/: index.html
api/low_level/: index.html
api/protobuf/: index.html
api/service/: index.html
api/types/: index.html
api/utils/: index.html
data/: AircraftFamily.json  Airlines.json  Airports.json  MobileCountries.json
data/research/: proto.jsonc
docs/: index.md
docs/api/: base.md  cache.md  core.md  functions.md  grpc_changelog.md  protobuf.md  service.md  types.md  utils.md
docs/css/: mkdocstrings.css
docs/usage/: authentication.md  cli.md  cli_output.txt  directories.md  examples.md  library.md  quickstart.md
docs/usage/scripts/: 00_introduction.py  01_live_feed_live.py  01_livefeed_live.py  10_flight_list.py  11_playback.py  12_live_feed.py  12_livefeed.py  13_nearest_flights.py  14_live_feed.py  15_flight_details.py  16_live_flights_status.py  18_follow_flight.py  20_flight_list.py  21_playback.py  22_arrivals.py  23_find.py  24_live_feed.py  24_livefeed.py  25_nearest_flights.py  26_live_flights_status.py  27_search_index.py  28_follow_flight.py  29_top_flights.py  30_flight_list.py  30_live_trail.py  31_historic_trail.py  31_playback.py  32_arrivals.py  32_flight_details.py  33_find.py  33_playback_flight.py  34_live_feed.py  36_live_flights_status.py  37_search_index.py  38_follow_flight.py  39_top_flights.py  40_live_trail.py  41_historic_trail.py  42_flight_details.py  43_playback_flight.py
examples/: live.ipynb  main.ipynb
proto/: request.proto  request_pb2.py  request_pb2.pyi
research/: G.json  livefeed_request.jsonc  proto.json
scripts/: check_signature.py  download_track.py  live.py  live_data.py  main.py  make.py  make_cli_output.py  proto-compile.sh  style-check.sh
scripts/core/: flight_list_paginate.py  flight_list_single.py  livefeed_live.py  playback.py
search/: search_index.json
src/fr24/: __init__.py  __main__.py  authentication.py  base.py  cache.py  cli.py  common.py  configuration.py  core.py  find.py  follow_flight.py  grpc.py  history.py  json.py  json_types.py  live_feed.py  live_flights_status.py  live_trail.py  livefeed.py  mongo.py  nearest_flights.py  search_index.py  service.py  top_flights.py  utils.py
src/fr24/proto/: CHANGELOG.md  README.md  __init__.py  _common.proto  _common_pb2.py  _common_pb2.pyi  _debug_pb2.py  _fetch_search_index.proto  _fetch_search_index_pb2.py  _fetch_search_index_pb2.pyi  _flight_details.proto  _flight_details_pb2.py  _flight_details_pb2.pyi  _follow_flight.proto  _follow_flight_pb2.py  _follow_flight_pb2.pyi  _health.proto  _health_pb2.py  _health_pb2.pyi  _historic_trail.proto  _historic_trail_pb2.py  _historic_trail_pb2.pyi  _live_feed.proto  _live_feed_pb2.py  _live_feed_pb2.pyi  _live_flight_status.proto  _live_flight_status_pb2.py  _live_flight_status_pb2.pyi  _live_trail.proto  _live_trail_pb2.py  _live_trail_pb2.pyi  _nearest_flights.proto  _nearest_flights_pb2.py  _nearest_flights_pb2.pyi  _playback_flight.proto  _playback_flight_pb2.py  _playback_flight_pb2.pyi  _search_index_pb2.py  _search_index_pb2.pyi  _top_flights.proto  (+10 more)
src/fr24/static/: AircraftFamily.json  Airlines.json  Airports.json  MobileCountries.json  __init__.py  __main__.py  bbox.py
src/fr24/tui/: formatters.py  style.tcss  tui.py  widgets.py
src/fr24/types/: __init__.py  airport_list.py  authentication.py  cache.py  common.py  core.py  find.py  flight_list.py  fr24.py  json.py  playback.py  static.py
tests/: conftest.py  test_core.py  test_core_flight_list.py  test_core_flightlist.py  test_core_livefeed.py  test_core_playback.py  test_main.py  test_misc.py  test_static.py  test_static_types.py
tests/api/: conftest.py  test_find.py  test_flight_details.py  test_flight_list.py  test_follow_flight.py  test_grpc_misc.py  test_live_feed.py  test_live_flights_status.py  test_livefeed.py  test_misc.py  test_nearest_flights.py  test_playback.py  test_playback_flight.py  test_top_flights.py
usage/authentication/: index.html
usage/cli/: index.html
usage/directories/: index.html
usage/examples/: index.html
usage/quickstart/: index.html
usage/scripts/: 00_introduction.py  10_flight_list.py  11_playback.py  12_livefeed.py  16_playback_flight.py  19_top_flights.py  20_flight_list.py  21_playback.py  22_flight_details.py  23_find.py  30_flight_list.py  32_arrivals.py  35_nearest_flights.py  37_search_index.py  39_top_flights.py  40_live_trail.py  41_historic_trail.py  43_playback_flight.py
