[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fr24"
version = "0.1.4"
description = "Parse gRPC and JSON data from flightradar24"
authors = [
    { name = "Abraham Cheung", email = "abraham@ylcheung.com" },
    { name = "Xavier Olive", email = "git@xoolive.org" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "appdirs>=1.4.4",
    "httpx[brotli,http2]>=0.27.2",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "protobuf==5.28.*",
    "pyarrow>=18.0.0",
    "textual>=0.85.2",
    "typer>=0.12.5",
]

[project.urls]
Repository = "https://github.com/cathaypacific8747/fr24.git"
Documentation = "https://cathaypacific8747.github.io/fr24/"
Issues = "https://github.com/cathaypacific8747/fr24/issues"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "textual-dev>=1.6.1"]
typing = ["mypy-protobuf>=3.6.0", "mypy>=1.13.0", "types-protobuf==5.28.*"]
lint = ["ruff>=0.7.2"]
test = [
    "eval-type-backport>=0.2.0", # for pydantic, <3.10 syntax
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
docs = [
    "black>=24.10.0",
    "mkdocs-material[imaging]>=9.5.43",
    "mkdocstrings-python>=1.12.2",
]

[project.scripts]
fr24 = 'fr24.cli:app'

# default-groups = ["dev"] by default, overriding for now
[tool.uv]
default-groups = ["dev", "typing", "lint", "test", "docs"]

[tool.ruff]
lint.select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]
exclude = ["proto"]
line-length = 80
target-version = "py39"

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas"]

[tool.mypy]
python_version = "3.9"
exclude = ["proto"]
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
