[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fr24"
version = "0.2.0"
description = "Parse gRPC and JSON data from flightradar24"
authors = [
    { name = "Abraham Cheung", email = "abraham@ylcheung.com" },
    { name = "Xavier Olive", email = "git@xoolive.org" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "appdirs>=1.4.4",
    "httpx[brotli,http2]>=0.27.2",
    "orjson>=3.10.14",
    "pandas>=2.2.3", # scheduled for removal
    "polars>=1.19.0",
    "protobuf==5.28.*",
]

[project.urls]
Repository = "https://github.com/cathaypacific8747/fr24.git"
Documentation = "https://cathaypacific8747.github.io/fr24/"
Issues = "https://github.com/cathaypacific8747/fr24/issues"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "textual-dev>=1.6.1"]
typing = ["mypy-protobuf>=3.6.0", "mypy>=1.13.0", "types-protobuf==5.28.*"]
lint = ["ruff>=0.7.2"]
test = [
    "anyio>=4.8.0",
    "eval-type-backport>=0.2.0", # for pydantic, <3.10 syntax
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
]
docs = [
    "mkdocs-material[imaging]>=9.5.43",
    "mkdocstrings-python>=1.13.0",
]

[project.scripts]
fr24 = 'fr24.cli:app'

[project.optional-dependencies]
cli = [
    "loguru>=0.7.3",
    "typer>=0.15.1",
]
tui = [
    "textual>=1.0.0",
]

# default-groups = ["dev"] by default, overriding for now
[tool.uv]
default-groups = ["dev", "typing", "lint", "test", "docs"]

[tool.ruff]
lint.select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]
exclude = ["proto"]
line-length = 80
target-version = "py39"

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas"]

[tool.mypy]
python_version = "3.9"
exclude = ["proto"]
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
